integration du SEO pour le referencement de l'application

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,51 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>VibraAI</title>
+  <title>VibraAI | Générateur d’e-mails intelligents par IA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 🔑 SEO Meta Tags -->
+  <meta name="description" content="VibraAI est une application web qui permet de générer facilement des e-mails professionnels et personnalisés grâce à l’intelligence artificielle. Gagnez du temps et boostez votre productivité.">
+  <meta name="keywords" content="VibraAI, génération d’e-mails, IA, intelligence artificielle, productivité, rédaction automatique, application web, générateur de texte, emails professionnels sous la langue de votre choix">
+  <meta name="author" content="VibraAI">
+
+  <!-- 🔑 Open Graph (partage sur réseaux sociaux) -->
+  <meta property="og:title" content="VibraAI | Générateur d’e-mails par IA">
+  <meta property="og:description" content="Créez vos e-mails en quelques secondes grâce à l’intelligence artificielle. Testez VibraAI gratuitement.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.vibraai.com/">
+  <meta property="og:image" content="https://www.vibraai.com/assets/og-image.jpg">
+
+  <!-- 🔑 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="VibraAI | Générateur d’e-mails intelligents">
+  <meta name="twitter:description" content="Générez vos e-mails professionnels en un clic grâce à VibraAI.">
+  <meta name="twitter:image" content="https://www.vibraai.com/assets/og-image.jpg">
+
+  <!-- 📱 Favicon et manifest -->
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
+
+  <!-- 🎨 CSS externes -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  
-  <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
 
+  <!-- ⚡ Performance -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- 📜 Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
 </body>
 </html>
