--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- 🔑 SEO Meta Tags -->
-  <meta name="description" content="VibraAI est une application web qui permet de générer facilement des e-mails professionnels et personnalisés grâce à l’intelligence artificielle. Gagnez du temps et boostez votre productivité.">
-  <meta name="keywords" content="VibraAI, génération d’e-mails, IA, intelligence artificielle, productivité, rédaction automatique, application web, générateur de texte, emails professionnels sous la langue de votre choix">
-  <meta name="author" content="VibraAI">
+  <meta name="description" content="VirbrayAI est une application web qui permet de générer facilement des e-mails professionnels et personnalisés grâce à l’intelligence artificielle. Gagnez du temps et boostez votre productivité.">
+  <meta name="keywords" content="VirbrayAI, Virbray, génération d’e-mails, IA, intelligence artificielle, productivité, rédaction automatique, application web, générateur de texte, emails professionnels sous la langue de votre choix">
+  <meta name="author" content="VirbrayAI">
 
   <!-- 🔑 Open Graph (partage sur réseaux sociaux) -->
   <meta property="og:title" content="VibraAI | Générateur d’e-mails par IA">
   <meta property="og:description" content="Créez vos e-mails en quelques secondes grâce à l’intelligence artificielle. Testez VibraAI gratuitement.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.vibraai.com/">
-  <meta property="og:image" content="https://www.vibraai.com/assets/og-image.jpg">
+  <meta property="og:url" content="https://www.virbray-ai.com/">
+  <meta property="og:image" content="https://www.virbray-ai.com/assets/og-image.jpg">
 
   <!-- 🔑 Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="VibraAI | Générateur d’e-mails intelligents">
-  <meta name="twitter:description" content="Générez vos e-mails professionnels en un clic grâce à VibraAI.">
-  <meta name="twitter:image" content="https://www.vibraai.com/assets/og-image.jpg">
+  <meta name="twitter:title" content="VirbrayAI | Générateur d’e-mails intelligents">
+  <meta name="twitter:description" content="Générez vos e-mails professionnels en un clic grâce à VirbrayAI.">
+  <meta name="twitter:image" content="https://www.virbray-ai.com/assets/og-image.jpg">
 
   <!-- 📱 Favicon et manifest -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -39,6 +39,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+  <!-- indexation Google -->
+  <meta name="google-site-verification" content="03__ePlXNYBlaLEgsizeZ-w6YwcQmeJHJUW9bSx_b08" />
+  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC7HYLVWSD"></script>
 <script>
