quelque modification importantes

--- a/src/index.html
+++ b/src/index.html
@@ -2,27 +2,27 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>VibraAI | Générateur d’e-mails intelligents par IA</title>
+  <title>VirbrayAI | Générateur d’e-mails intelligents par IA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- 🔑 SEO Meta Tags -->
-  <meta name="description" content="VibraAI est une application web qui permet de générer facilement des e-mails professionnels et personnalisés grâce à l’intelligence artificielle. Gagnez du temps et boostez votre productivité.">
-  <meta name="keywords" content="VibraAI, génération d’e-mails, IA, intelligence artificielle, productivité, rédaction automatique, application web, générateur de texte, emails professionnels sous la langue de votre choix">
-  <meta name="author" content="VibraAI">
+  <meta name="description" content="VirbrayAI est une application web qui permet de générer facilement des e-mails professionnels et personnalisés grâce à l’intelligence artificielle. Gagnez du temps et boostez votre productivité.">
+  <meta name="keywords" content="VirbrayAI, génération d’e-mails, IA, intelligence artificielle, productivité, rédaction automatique, application web, générateur de texte, emails professionnels sous la langue de votre choix">
+  <meta name="author" content="VirbrayAI">
 
   <!-- 🔑 Open Graph (partage sur réseaux sociaux) -->
-  <meta property="og:title" content="VibraAI | Générateur d’e-mails par IA">
-  <meta property="og:description" content="Créez vos e-mails en quelques secondes grâce à l’intelligence artificielle. Testez VibraAI gratuitement.">
+  <meta property="og:title" content="VirbrayAI | Générateur d’e-mails par IA">
+  <meta property="og:description" content="Créez vos e-mails en quelques secondes grâce à l’intelligence artificielle. Testez VirbrayAI gratuitement.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.vibraai.com/">
-  <meta property="og:image" content="https://www.vibraai.com/assets/og-image.jpg">
+  <meta property="og:url" content="https://www.virbray-ai.com/">
+  <meta property="og:image" content="https://www.virbray-ai.com/assets/og-image.jpg">
 
   <!-- 🔑 Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="VibraAI | Générateur d’e-mails intelligents">
-  <meta name="twitter:description" content="Générez vos e-mails professionnels en un clic grâce à VibraAI.">
-  <meta name="twitter:image" content="https://www.vibraai.com/assets/og-image.jpg">
+  <meta name="twitter:title" content="VirbrayAI | Générateur d’e-mails intelligents">
+  <meta name="twitter:description" content="Générez vos e-mails professionnels en un clic grâce à VirbrayAI.">
+  <meta name="twitter:image" content="https://www.virbray-ai.com/assets/og-image.jpg">
 
   <!-- 📱 Favicon et manifest -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
